fix: исправления перед ревью

--- a/index.html
+++ b/index.html
@@ -39,57 +39,58 @@
                         alt="Старинное сооружение на фоне гор">
                     <div class="galery__container">
                         <h2 class="galery__title">Карачаевск</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
                 <li class="galery__item">
                     <img class="galery__image" src="./images/galery-mount-elbrus.jpg" alt="Гора Эльбрус на закате">
                     <div class="galery__container">
                         <h2 class="galery__title">Гора Эльбрус</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
                 <li class="galery__item">
                     <img class="galery__image" src="./images/galery-dombay.jpg" alt="Лес на фоне горных пиков">
                     <div class="galery__container">
                         <h2 class="galery__title">Домбай</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
                 <li class="galery__item">
                     <img class="galery__image" src="./images/galery-elbrus.jpeg" alt="дорога ведущая к горе">
                     <div class="galery__container">
                         <h2 class="galery__title">Гора Эльбрус</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
                 <li class="galery__item">
                     <img class="galery__image" src="./images/galery-cable-car.jpg" alt="Канатная дорога в горах">
                     <div class="galery__container">
                         <h2 class="galery__title">Домбай</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
                 <li class="galery__item">
                     <img class="galery__image" src="./images/galery-mountain-lake.jpg" alt="Прозрачное горное озеро">
                     <div class="galery__container">
                         <h2 class="galery__title">Карачаево-Черкесия</h2>
-                        <div class="galery__like"><div>
+                        <div class="galery__like"></div>
                     </div>
                 </li>
-
             </ul>
 
         </section>
 
     </main>
-      
+
     <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 
     </footer>
     <div class="popup">
+        <!-- popup_opened -->
         <form class="popup__container">
+            <div class="popup__close"></div>
             <h1 class="popup__title">Редактировать профиль</h1>
             <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
             <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
