--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <body class="page">
     <header class="header">
         <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-        <div class="header__border"></div>
-
     </header>
 
     <main class="content">
@@ -24,11 +22,10 @@
                 <img class="profile__photo" src="./images/profile-kusto.jpg"
                     alt="фото Жака-Ива Кусто извесного исследователя океана">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <h2 class="profile__subtitle">Исследователь океана</h2>
-                <img class="profile__edit-button" src="./images/profile-edit-button.png"
-                    alt="кнопка редактирования профиля">
+                <p class="profile__subtitle">Исследователь океана</p>
+                <button class="profile__edit-button"></button>
             </div>
-            <div class="profile__add-button"></div>
+            <button class="profile__add-button"></button>
 
         </section>
 
@@ -39,7 +36,7 @@
                         alt="Старинное сооружение на фоне гор">
                     <div class="galery__container">
                         <h2 class="galery__title">Карачаевск</h2>
-                        <div class="galery__like"></div>
+                        <button class="galery__like"></button>
                     </div>
                 </li>
                 <li class="galery__item">
@@ -89,13 +86,15 @@
     </footer>
     <div class="popup">
         <!-- popup_opened -->
-        <form class="popup__container">
-            <div class="popup__close"></div>
-            <h1 class="popup__title">Редактировать профиль</h1>
-            <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
-            <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
-            <input class="popup__button" type="button" value="Сохранить">
-        </form>
+        <div class="popup__container">
+            <button class="popup__close"></button>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <form class="popup__form" name="profile">
+                <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
+                <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
+                <button class="popup__button">Сохранить</button>
+            </form>
+        </div>
 
     </div>
 </body>
