--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     alt="фото Жака-Ива Кусто извесного исследователя океана">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <p class="profile__subtitle">Исследователь океана</p>
-                <button class="profile__edit-button"></button>
+                <button class="profile__edit-button" type="button"></button>
             </div>
-            <button class="profile__add-button"></button>
+            <button class="profile__add-button" type="button"></button>
 
         </section>
 
@@ -36,7 +36,7 @@
                         alt="Старинное сооружение на фоне гор">
                     <div class="galery__container">
                         <h2 class="galery__title">Карачаевск</h2>
-                        <button class="galery__like"></button>
+                        <button class="galery__like" type="button"></button>
                     </div>
                 </li>
                 <li class="galery__item">
@@ -87,12 +87,12 @@
     <div class="popup">
         <!-- popup_opened -->
         <div class="popup__container">
-            <button class="popup__close"></button>
+            <button class="popup__close" type="button"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form" name="profile">
                 <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
                 <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
-                <button class="popup__button">Сохранить</button>
+                <button class="popup__button" type="button">Сохранить</button>
             </form>
         </div>
 
