fix: изменение форматирования

--- a/index.html
+++ b/index.html
@@ -2,101 +2,100 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Интерактивная страница с возможностью добавления фотографий">
-    <meta name="keywords" content="фото, интерактив, микро соцсеть">
-    <meta name="author" content="Михаил Мудров">
-    <link rel="stylesheet" href="./pages/index.css">
-    <title>Проект Место</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Интерактивная страница с возможностью добавления фотографий">
+  <meta name="keywords" content="фото, интерактив, микро соцсеть">
+  <meta name="author" content="Михаил Мудров">
+  <link rel="stylesheet" href="./pages/index.css">
+  <title>Проект Место</title>
 </head>
 
 <body class="page">
-    <header class="header">
-        <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
-    </header>
+  <header class="header">
+    <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
+  </header>
 
-    <main class="content">
-        <section class="profile">
-            <div class="profile__container">
-                <img class="profile__photo" src="./images/profile-kusto.jpg"
-                    alt="фото Жака-Ива Кусто извесного исследователя океана">
-                <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <p class="profile__subtitle">Исследователь океана</p>
-                <button class="profile__edit-button" type="button"></button>
-            </div>
-            <button class="profile__add-button" type="button"></button>
+  <main class="content">
+    <section class="profile">
+      <div class="profile__container">
+        <img class="profile__photo" src="./images/profile-kusto.jpg"
+          alt="фото Жака-Ива Кусто извесного исследователя океана">
+        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <p class="profile__subtitle">Исследователь океана</p>
+        <button class="profile__edit-button" type="button"></button>
+      </div>
+      <button class="profile__add-button" type="button"></button>
 
-        </section>
+    </section>
 
-        <section class="galery">
-            <ul class="galery__list">
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-karachaevsk.jpg"
-                        alt="Старинное сооружение на фоне гор">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Карачаевск</h2>
-                        <button class="galery__like" type="button"></button>
-                    </div>
-                </li>
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-mount-elbrus.jpg" alt="Гора Эльбрус на закате">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Гора Эльбрус</h2>
-                        <div class="galery__like"></div>
-                    </div>
-                </li>
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-dombay.jpg" alt="Лес на фоне горных пиков">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Домбай</h2>
-                        <div class="galery__like"></div>
-                    </div>
-                </li>
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-elbrus.jpeg" alt="дорога ведущая к горе">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Гора Эльбрус</h2>
-                        <div class="galery__like"></div>
-                    </div>
-                </li>
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-cable-car.jpg" alt="Канатная дорога в горах">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Домбай</h2>
-                        <div class="galery__like"></div>
-                    </div>
-                </li>
-                <li class="galery__item">
-                    <img class="galery__image" src="./images/galery-mountain-lake.jpg" alt="Прозрачное горное озеро">
-                    <div class="galery__container">
-                        <h2 class="galery__title">Карачаево-Черкесия</h2>
-                        <div class="galery__like"></div>
-                    </div>
-                </li>
-            </ul>
+    <section class="galery">
+      <ul class="galery__list">
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-karachaevsk.jpg" alt="Старинное сооружение на фоне гор">
+          <div class="galery__container">
+            <h2 class="galery__title">Карачаевск</h2>
+            <button class="galery__like" type="button"></button>
+          </div>
+        </li>
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-mount-elbrus.jpg" alt="Гора Эльбрус на закате">
+          <div class="galery__container">
+            <h2 class="galery__title">Гора Эльбрус</h2>
+            <div class="galery__like"></div>
+          </div>
+        </li>
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-dombay.jpg" alt="Лес на фоне горных пиков">
+          <div class="galery__container">
+            <h2 class="galery__title">Домбай</h2>
+            <div class="galery__like"></div>
+          </div>
+        </li>
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-elbrus.jpeg" alt="дорога ведущая к горе">
+          <div class="galery__container">
+            <h2 class="galery__title">Гора Эльбрус</h2>
+            <div class="galery__like"></div>
+          </div>
+        </li>
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-cable-car.jpg" alt="Канатная дорога в горах">
+          <div class="galery__container">
+            <h2 class="galery__title">Домбай</h2>
+            <div class="galery__like"></div>
+          </div>
+        </li>
+        <li class="galery__item">
+          <img class="galery__image" src="./images/galery-mountain-lake.jpg" alt="Прозрачное горное озеро">
+          <div class="galery__container">
+            <h2 class="galery__title">Карачаево-Черкесия</h2>
+            <div class="galery__like"></div>
+          </div>
+        </li>
+      </ul>
 
-        </section>
+    </section>
 
-    </main>
+  </main>
 
-    <footer class="footer">
-        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+  <footer class="footer">
+    <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 
-    </footer>
-    <div class="popup">
-        <!-- popup_opened -->
-        <div class="popup__container">
-            <button class="popup__close" type="button"></button>
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__form" name="profile">
-                <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
-                <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
-                <button class="popup__button" type="button">Сохранить</button>
-            </form>
-        </div>
-
+  </footer>
+  <div class="popup">
+    <!-- popup_opened -->
+    <div class="popup__container">
+      <button class="popup__close" type="button"></button>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <form class="popup__form" name="profile">
+        <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
+        <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
+        <button class="popup__button" type="button">Сохранить</button>
+      </form>
     </div>
+
+  </div>
 </body>
 
 </html>
