fix: изменения после 3го ревью

--- a/index.html
+++ b/index.html
@@ -42,35 +42,35 @@
           <img class="galery__image" src="./images/galery-mount-elbrus.jpg" alt="Гора Эльбрус на закате">
           <div class="galery__container">
             <h2 class="galery__title">Гора Эльбрус</h2>
-            <div class="galery__like"></div>
+            <button class="galery__like" type="button"></button>
           </div>
         </li>
         <li class="galery__item">
           <img class="galery__image" src="./images/galery-dombay.jpg" alt="Лес на фоне горных пиков">
           <div class="galery__container">
             <h2 class="galery__title">Домбай</h2>
-            <div class="galery__like"></div>
+            <button class="galery__like" type="button"></button>
           </div>
         </li>
         <li class="galery__item">
           <img class="galery__image" src="./images/galery-elbrus.jpeg" alt="дорога ведущая к горе">
           <div class="galery__container">
             <h2 class="galery__title">Гора Эльбрус</h2>
-            <div class="galery__like"></div>
+            <button class="galery__like" type="button"></button>
           </div>
         </li>
         <li class="galery__item">
           <img class="galery__image" src="./images/galery-cable-car.jpg" alt="Канатная дорога в горах">
           <div class="galery__container">
             <h2 class="galery__title">Домбай</h2>
-            <div class="galery__like"></div>
+            <button class="galery__like" type="button"></button>
           </div>
         </li>
         <li class="galery__item">
           <img class="galery__image" src="./images/galery-mountain-lake.jpg" alt="Прозрачное горное озеро">
           <div class="galery__container">
             <h2 class="galery__title">Карачаево-Черкесия</h2>
-            <div class="galery__like"></div>
+            <button class="galery__like" type="button"></button>
           </div>
         </li>
       </ul>
