--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 
   </footer>
-  <div class="popup popup_opened">
+  <div class="popup">
     <!-- popup_opened -->
     <div class="popup__container">
       <button class="popup__close" type="button"></button>
