--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <button class="popup__close" type="button"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="profile">
-        <input class="popup__item" type="text" name="name" placeholder="Жак-Ив Кусто">
-        <input class="popup__item" type="text" name="about" placeholder="Исследователь океана">
-        <button class="popup__button" type="button">Сохранить</button>
+        <input class="popup__item" type="text" name="name" id="name">
+        <input class="popup__item" type="text" name="about" id="about">
+        <button class="popup__button" type="submit">Сохранить</button>
       </form>
     </div>
 
