feat: добавить попап для галереи

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
     <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
 
   </footer>
-  <div class="popup">
+  <div class="popup" id="popupProfile">
     <!-- popup_opened -->
     <div class="popup__container">
-      <button class="popup__close" type="button"></button>
+      <button class="popup__close" type="button" id="profileClose"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="profile">
         <input class="popup__item" type="text" name="name" id="name">
@@ -95,10 +95,10 @@
       </form>
     </div>
   </div>
-  <div class="popup">
+  <div class="popup" id="popupGalery">
     <!-- popup_opened -->
     <div class="popup__container">
-      <button class="popup__close" type="button"></button>
+      <button class="popup__close" type="button" id="galeryClose"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__form" name="place">
         <input class="popup__item" type="text" name="imageTitle" id="imageTitle" placeholder="Название">
