feat: удалить весь код, потому что все не так ¯\_(ツ)_/¯

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       </form>
     </div>
   </div>
+
   <div class="popup" id="popupGalery">
     <!-- popup_opened -->
     <div class="popup__container">
@@ -105,6 +106,14 @@
         <input class="popup__item" type="text" name="imageLink" id="imageLink" placeholder="Ссылка на картинку">
         <button class="popup__button" type="submit" id="addButton">Создать</button>
       </form>
+    </div>
+  </div>
+
+  <div class="image-popup" id="imagePopup">
+    <div class="image-popup__container">
+      <img class="image-popup__picture" src="" alt="">
+      <p class="image-popup__text"></p>
+      <button class="image-popup__close" type="button"></button>
     </div>
   </div>
 
