--- a/index.html
+++ b/index.html
@@ -31,48 +31,7 @@
 
     <section class="galery">
       <ul class="galery__list">
-        <!--<li class="galery__item">
-          <img class="galery__image" src="./images/galery-karachaevsk.jpg" alt="Старинное сооружение на фоне гор">
-          <div class="galery__container">
-            <h2 class="galery__title">Карачаевск</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>
-        <li class="galery__item">
-          <img class="galery__image" src="./images/galery-mount-elbrus.jpg" alt="Гора Эльбрус на закате">
-          <div class="galery__container">
-            <h2 class="galery__title">Гора Эльбрус</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>
-        <li class="galery__item">
-          <img class="galery__image" src="./images/galery-dombay.jpg" alt="Лес на фоне горных пиков">
-          <div class="galery__container">
-            <h2 class="galery__title">Домбай</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>
-        <li class="galery__item">
-          <img class="galery__image" src="./images/galery-elbrus.jpeg" alt="дорога ведущая к горе">
-          <div class="galery__container">
-            <h2 class="galery__title">Гора Эльбрус</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>
-        <li class="galery__item">
-          <img class="galery__image" src="./images/galery-cable-car.jpg" alt="Канатная дорога в горах">
-          <div class="galery__container">
-            <h2 class="galery__title">Домбай</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>
-        <li class="galery__item">
-          <img class="galery__image" src="./images/galery-mountain-lake.jpg" alt="Прозрачное горное озеро">
-          <div class="galery__container">
-            <h2 class="galery__title">Карачаево-Черкесия</h2>
-            <button class="galery__like" type="button"></button>
-          </div>
-        </li>-->
+
       </ul>
 
     </section>
@@ -109,11 +68,11 @@
     </div>
   </div>
 
-  <div class="image-popup" id="imagePopup">
-    <div class="image-popup__container">
-      <img class="image-popup__picture" src="" alt="">
-      <p class="image-popup__text"></p>
-      <button class="image-popup__close" type="button"></button>
+  <div class="popup" id="imagePopup">
+    <div class="popup__image-container">
+      <img class="popup__picture" src="" alt="">
+      <p class="popup__text"></p>
+      <button class="popup__close" type="button" id="imageClose"></button>
     </div>
   </div>
 
