--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </li>
   </template>
 
-  <script src="./js/script.js"></script>
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
