--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,18 @@
   <meta name="description" content="Интерактивная страница с возможностью добавления фотографий">
   <meta name="keywords" content="фото, интерактив, микро соцсеть">
   <meta name="author" content="Михаил Мудров">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Проект Место</title>
 </head>
 
 <body class="page">
   <header class="header">
-    <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
+    <img class="header__logo" src="<%=require('./images/header-logo.svg')%>" alt="Логотип">
   </header>
 
   <main class="content">
     <section class="profile">
       <div class="profile__container">
-        <img class="profile__photo" src="./images/profile-kusto.jpg"
+        <img class="profile__photo" src="<%=require('./images/profile-kusto.jpg')%>"
           alt="фото Жака-Ива Кусто извесного исследователя океана">
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <p class="profile__subtitle">Исследователь океана</p>
@@ -86,8 +85,6 @@
       <button class="galery__delete-button" type="button" id="delButton"></button>
     </li>
   </template>
-
-  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
