--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,14 @@
       <button class="popup__close" type="button" id="profileClose"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="profile">
-        <input class="popup__item" type="text" name="name" id="name">
-        <input class="popup__item" type="text" name="about" id="about">
+        <label class="popup__field">
+          <input required class="popup__item" type="text" name="name" id="name" minlength="2" maxlength="40">
+          <span class="popup__input-error" id="name-error"></span>
+        </label>
+        <label class="popup__field">
+          <input required class="popup__item" type="text" name="about" id="about" minlength="2" maxlength="200">
+          <span class="popup__input-error" id="about-error"></span>
+        </label>
         <button class="popup__button" type="submit">Сохранить</button>
       </form>
     </div>
@@ -60,9 +66,15 @@
       <button class="popup__close" type="button" id="galeryClose"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__form" name="place" id="galeryForm">
-        <input class="popup__item" type="text" name="imageTitle" id="imageTitle" placeholder="Название">
-        <input class="popup__item" type="text" name="imageLink" id="imageLink" placeholder="Ссылка на картинку">
-        <button class="popup__button" type="submit" id="addButton">Создать</button>
+        <label class="popup__field">
+          <input class="popup__item" type="text" name="imageTitle" id="imageTitle" placeholder="Название">
+          <span class="popup__input-error" id="imageName-error"></span>
+        </label>
+        <label class="popup__field">
+          <input class="popup__item" type="text" name="imageLink" id="imageLink" placeholder="Ссылка на картинку">
+          <span class="popup__input-error" id="imageLink-error"></span>
+        </label>
+        <button class="popup__button popup__button_inactive" type="submit" id="addButton">Создать</button>
       </form>
     </div>
   </div>
