--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,13 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="profile">
         <label class="popup__field">
-          <input required class="popup__item" type="text" name="name" id="name" minlength="2" maxlength="40">
+          <input required class="popup__item" type="text" name="name" placeholder="Имя" id="name" minlength="2"
+            maxlength="40">
           <span class="popup__input-error" id="name-error"></span>
         </label>
         <label class="popup__field">
-          <input required class="popup__item" type="text" name="about" id="about" minlength="2" maxlength="200">
+          <input required class="popup__item" type="text" name="about" id="about" placeholder="О себе" minlength="2"
+            maxlength="200">
           <span class="popup__input-error" id="about-error"></span>
         </label>
         <button class="popup__button" type="submit">Сохранить</button>
