реализовать загрузку данных профиля с сервера

--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
   <main class="content">
     <section class="profile">
       <div class="profile__container">
-        <img class="profile__photo" src="<%=require('./images/profile-kusto.jpg')%>"
-          alt="фото Жака-Ива Кусто извесного исследователя океана">
+        <div class="profile__photo-container">
+          <img class="profile__photo" src="<%=require('./images/profile-kusto.jpg')%>"
+            alt="фото Жака-Ива Кусто извесного исследователя океана">
+        </div>
         <h1 class="profile__title">Жак-Ив Кусто</h1>
         <p class="profile__subtitle">Исследователь океана</p>
         <button class="profile__edit-button" type="button"></button>
