--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
             maxlength="200">
           <span class="popup__input-error" id="about-error"></span>
         </label>
-        <button class="popup__button" type="submit">Сохранить</button>
+        <button class="popup__button" type="submit" id="profileSaveButton">Сохранить</button>
       </form>
     </div>
   </div>
