зайти в тупик, начать все заново

--- a/src/index.html
+++ b/src/index.html
@@ -109,6 +109,15 @@
     </div>
   </div>
 
+  <div class="popup" id="deletePopup">
+    <!-- popup_opened -->
+    <div class="popup__container">
+      <button class="popup__close" type="button" id="deletePopupClose"></button>
+      <h2 class="popup__title">Вы уверены?</h2>
+      <button class="popup__button" type="button" id="deletePopupButton">Да</button>
+    </div>
+  </div>
+
   <template id="galeryTemplate">
     <li class="galery__item" id="galeryItem">
       <img class="galery__image" src="" alt="" id="galeryImage"
